--- a/themes/boot/assets/scss/layout/home.scss
+++ b/themes/boot/assets/scss/layout/home.scss
@@ -2,7 +2,7 @@
 @media only screen and (max-width: 768px)  {
     .hero-content {
         h1 {
-            font-size: 3.0rem;
+            font-size: 2.5rem;
         }
     }
     .home__services {
@@ -39,7 +39,7 @@
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-    height: 80vh;
+    height: 800px;
 }
 
 .hero-content {
