--- a/themes/boot/assets/scss/partial/faq.scss
+++ b/themes/boot/assets/scss/partial/faq.scss
@@ -5,20 +5,25 @@
 }
 .accordion-section .panel-default .panel-title a {
     display: block;
-    font-style: italic;
     font-size: 1.5rem;
 }
+.collapsed {
+    color: black !important;
+}
+a:hover {
+    color: black;
+    text-decoration: none;
+}
 .accordion-section .panel-default .panel-title a:after {
-    font-family: 'FontAwesome';
     font-style: normal;
     font-size: 1.5rem;
-    content: "\f106";
+    content: "\0025B4";
     color: $brand-color;
     float: right;
     margin-top: 0px;
 }
 .accordion-section .panel-default .panel-title a.collapsed:after {
-    content: "\f107";
+    content: "\0025BE";
 }
 .accordion-section .panel-default .panel-body {
     font-size: 1.2rem;
