--- a/themes/boot/layouts/partials/footer.html
+++ b/themes/boot/layouts/partials/footer.html
@@ -1,14 +1,15 @@
-   
-<footer class="bg-footer">
-    <section class="container-fluid bg-black py-8">
-          <h3 class="display-5 text-white text-center">Your Business Exist to Serve The World. Let Them Know About It.</h3>
-        </div>
-      </section>
+<section class="bg-brand py-8">
+    <div class="container">
+    <h3 class="display-4 text-white text-center">Your Business Exist to Serve The World. Your Great Quote Goes Here .</h3>
+</div>
+</div>
+</section>   
+<footer class="bg-black">
     <section class="footer__links container text-white pt-8">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 pb-1">
                 <div class="footer__box">
-                <h3 class="uppercase pb-1">{{ $.Site.Params.businessname }}</h3>
+                <h3 class="pb-1">{{ $.Site.Params.businessname }}</h3>
                 <p>onvallis posuere morbi leo urna molestie at elementum. Turpis cursus in hac habitasse platea dictumst quisque. Nulla pellentesque dignissim enim sit amet venenatis.</p>
                 <svg class="fill-brand">
                     <use xlink:href="{{ $.Site.BaseURL }}img/brands.svg#facebook-square"></use>
@@ -20,21 +21,21 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 pb-1">
                 <div class="footer__box">
-                <h3 class="uppercase pb-1">Contact</h3>
+                <h3 class="pb-1">Contact</h3>
                 <address>
                     {{ $.Site.Params.address }}<br>
                     {{ $.Site.Params.city }}, {{ $.Site.Params.region }}<br>
                     {{ $.Site.Params.postalcode }},{{ $.Site.Params.country }}<br>
                     </address>
                     <strong>Phone:</strong>
-                    <a class="footer__highlight" href="tel:{{ $.Site.Params.phone }}"><h5><u>{{ $.Site.Params.phone }}</u></h5></a>
+                    <a class="footer__highlight" href="tel:{{ $.Site.Params.phone }}"><u>{{ $.Site.Params.phone }}</u></a><br>
                     <strong>Email:</strong>
-                    <a class="footer__highlight" href="mailto:{{ $.Site.Params.email }}"><h5><u>{{ $.Site.Params.email }}</u></h5></a>
+                    <a class="footer__highlight" href="mailto:{{ $.Site.Params.email }}"><u>{{ $.Site.Params.email }}</u></a>
             </div>
         </div>
             <div class="col-lg-4 col-md-4 col-sm 12 pb-1">
                 <div class="footer__box">
-                <h3 class="uppercase pb-1">Business Hours</h3>
+                <h3 class="pb-1">Business Hours</h3>
                 <ul class="hours">
                 <li class="pt-1">Mo - We <strong>11:00-20:00</strong></li>
                 <li class="pt-1">Th - Sat <strong>10:00-22:00</strong></li>
@@ -47,7 +48,7 @@
     </section>
     <div class="container">
         <div class="text-white credit">
-            <div><span>Handcrafted with ❤️ by </span><span><a class="footer__highlight" href="#"><u>Gold Standard Sites</u></a>&nbsp</span> <span>- Copyright © {{ dateFormat "2006" now }}</span></div>
+            <div><span>Handcrafted with ❤️ by </span><span><a class="footer__highlight" href="https://www.goldstandardsites.com"><u>Gold Standard Sites</u></a>&nbsp</span> <span>- Copyright © {{ dateFormat "2006" now }}</span></div>
         </div>
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
