--- a/themes/boot/layouts/partials/contactform.html
+++ b/themes/boot/layouts/partials/contactform.html
@@ -2,7 +2,7 @@
     <div class="row" data-aos="fade-up" data-aos-duration="800">
       <div class="col-lg-6 col-md-6 col-sm-12">
         <div class="pr-3 contact__form--info text-left">
-          <h2 class="uppercase pb-2">Drop us a line</h2>
+          <h2 class="pb-2">Get in Touch</h2>
           <form id="contact-form" method="POST" action="https://usebasin.com/f/e81dd2c10ed2" role="form">
   
             <div class="messages"></div>
@@ -12,14 +12,14 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
-                    <label for="form_name">First name *</label>
-                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                    <label for="form_name">First Name *</label>
+                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Enter your firstname *" required="required" data-error="Firstname is required.">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <label for="form_lastname">Last name *</label>
+                    <label for="form_lastname">Last Name *</label>
                     <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
                     <div class="help-block with-errors"></div>
                   </div>
@@ -29,14 +29,14 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="form_email">Email *</label>
-                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Enter your email *" required="required" data-error="Valid email is required.">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="form_phone">Phone</label>
-                    <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                    <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Enter your phone">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
@@ -45,7 +45,7 @@
                 <div class="col-md-12">
                   <div class="form-group">
                     <label for="form_message">Message *</label>
-                    <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required data-error="Please,leave us a message."></textarea>
+                    <textarea id="form_message" name="message" class="form-control" placeholder="Type your message here...." rows="4" required data-error="Please,leave us a message."></textarea>
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
@@ -60,7 +60,7 @@
       </div>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12 contact__form--info text-left">
-      <h2 class="uppercase pb-2">Contact Details</h2>
+      <h2 class="pb-2">Contact Details</h2>
       <div class="contact__detail">
         <svg class="fill-brand pr-1">
           <use xlink:href="{{ $.Site.BaseURL }}img/solid.svg#map-marker"></use>
