--- a/themes/boot/layouts/partials/footer.html
+++ b/themes/boot/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <section class="bg-brand py-8">
     <div class="container">
-    <h3 class="display-4 text-white text-center">Your Business Exist to Serve The World. Your Great Quote Goes Here .</h3>
+    <h3 class="display-4 text-white text-center">Your Great Quote Goes Here</h3>
 </div>
 </div>
 </section>   
