--- a/themes/boot/layouts/_default/about.html
+++ b/themes/boot/layouts/_default/about.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12">
         <img src="{{ $.Site.BaseURL }}img/about-img.jpg" alt="Image of {{ $.Site.Title }}" class="img-fluid img-thumbnail mb-2" data-aos="fade-right" data-aos-duration="800">
-        <p class="text-center lead">{{.Params.owner}}</p>
+        <p class="text-center lead">{{.Params.name1}}</p>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 home__about--desc">
       <h2 class="display-4">{{.Params.h2}}</h2>
