--- a/themes/boot/layouts/_default/gallery.html
+++ b/themes/boot/layouts/_default/gallery.html
@@ -13,28 +13,28 @@
 <div class="container video pt-8">
     {{.Content}}
 </div>
-<section class="gallery pb-8">
+<section class="gallery pt-4 pb-8">
     <div class="container">
         <div class="row">
-          <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid rounded py-2">
+          <a href="{{ $.Site.BaseURL}}/img/gallery_img1.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}/img/gallery_img1.jpg" class="img-fluid rounded py-1">
           </a>
-          <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="https://unsplash.it/600.jpg?image=252" class="img-fluid rounded py-2">
+          <a href="{{ $.Site.BaseURL}}/img/gallery_img2.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}/img/gallery_img2.jpg" class="img-fluid rounded py-1">
           </a>
-          <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="https://unsplash.it/600.jpg?image=253" class="img-fluid rounded py-2">
+          <a href="{{ $.Site.BaseURL}}/img/gallery_img3.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}/img/gallery_img3.jpg" class="img-fluid rounded py-1">
           </a>
         </div>
         <div class="row">
-          <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="https://unsplash.it/600.jpg?image=254" class="img-fluid rounded py-2">
+          <a href="{{ $.Site.BaseURL}}/img/gallery_img4.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}/img/gallery_img4.jpg" class="img-fluid rounded py-1">
           </a>
-          <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="https://unsplash.it/600.jpg?image=255" class="img-fluid rounded py-2">
+          <a href="{{ $.Site.BaseURL}}/img/gallery_img5.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}/img/gallery_img5.jpg" class="img-fluid rounded py-1">
           </a>
-          <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="https://unsplash.it/600.jpg?image=256" class="img-fluid rounded py-2">
+          <a href="{{ $.Site.BaseURL}}/img/gallery_img6.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}/img/gallery_img6.jpg" class="img-fluid rounded py-1">
           </a>
         </div>
       </div>
