--- a/themes/boot/layouts/404.html
+++ b/themes/boot/layouts/404.html
@@ -18,4 +18,24 @@
         </div>
     </div>
 </div>
+<header class="subheader">
+    <div class="overlay">
+      <div class="container">
+        <div class="sub-content">
+          <h1 class="display-4 uppercase">Oops!</h1>
+          <h2>
+            404 Not Found</h2>
+        <div class="error-details">
+            Sorry, an error has occured, Requested page not found!
+        </div>
+        <div class="error-actions">
+            <a href="{{ $.Site.BaseURL }}" class="btn btn-primary btn-lg">
+                Take Me Home 
+            </a>
+            <a href="{{ $.Site.BaseURL }}/contact" class="btn btn-default btn-lg">Contact Support </a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </header>
 {{ end }}
