--- a/themes/boot/layouts/404.html
+++ b/themes/boot/layouts/404.html
@@ -1,23 +1,4 @@
 {{ define "main"}}
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div>
-                <h1>
-                    Oops!</h1>
-                <h2>
-                    404 Not Found</h2>
-                <div class="error-details">
-                    Sorry, an error has occured, Requested page not found!
-                </div>
-                <div class="error-actions">
-                    <a href="http://www.jquery2dotnet.com" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
-                        Take Me Home </a><a href="http://www.jquery2dotnet.com" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <header class="subheader">
     <div class="overlay">
       <div class="container">
@@ -32,7 +13,7 @@
             <a href="{{ $.Site.BaseURL }}" class="btn btn-primary btn-lg">
                 Take Me Home 
             </a>
-            <a href="{{ $.Site.BaseURL }}/contact" class="btn btn-default btn-lg">Contact Support </a>
+            <a href="{{ $.Site.BaseURL }}contact" class="btn btn-default btn-lg">Contact Support </a>
         </div>
         </div>
       </div>
