--- a/themes/boot/layouts/404.html
+++ b/themes/boot/layouts/404.html
@@ -1,20 +1,12 @@
 {{ define "main"}}
-<header class="subheader">
+  <header class="header">
     <div class="overlay">
       <div class="container">
-        <div class="sub-content">
-          <h1 class="display-4 uppercase">Oops!</h1>
-          <h2>
-            404 Not Found</h2>
-        <div class="error-details">
-            Sorry, an error has occured, Requested page not found!
-        </div>
-        <div class="error-actions">
-            <a href="{{ $.Site.BaseURL }}" class="btn btn-primary btn-lg">
-                Take Me Home 
-            </a>
-            <a href="{{ $.Site.BaseURL }}contact" class="btn btn-default btn-lg">Contact Support </a>
-        </div>
+        <div class="hero-content">
+          <h1 class="display-2">Oops!</h1>
+          <h2 class="display-3 uppercase">404 Not Found</h1>
+          <p class="lead">Sorry, an error has occured, Requested page not found!</p>
+          <a href="{{ $.Site.BaseURL }}"><button class="btn btn-outline-light btn-lg">Take Me Home</button></a>
         </div>
       </div>
     </div>
