Bigger FAQ Arrow

--- a/themes/boot/assets/scss/partial/faq.scss
+++ b/themes/boot/assets/scss/partial/faq.scss
@@ -16,11 +16,14 @@ a:hover {
 }
 .accordion-section .panel-default .panel-title a:after {
     font-style: normal;
-    font-size: 2.5rem;
+    font-size: 25px;
     content: "\0025B4";
-    color: $brand-color;
+    color: white;
     float: right;
     margin-top: 0px;
+    padding: 6px 14px;
+    background-color: $brand-color;
+    border-radius: 100%;
 }
 .accordion-section .panel-default .panel-title a.collapsed:after {
     content: "\0025BE";
