--- a/themes/boot/assets/scss/partial/faq.scss
+++ b/themes/boot/assets/scss/partial/faq.scss
@@ -21,7 +21,7 @@ a:hover {
     color: white;
     float: right;
     margin-top: 0px;
-    padding: 6px 14px;
+    padding: 3px 14px 6px 14px;;
     background-color: $brand-color;
     border-radius: 100%;
 }
