--- a/themes/boot/assets/scss/global/hamburger.scss
+++ b/themes/boot/assets/scss/global/hamburger.scss
@@ -106,7 +106,7 @@
       .menu-wrap .menu {
         position: fixed;
         top: 0;
-        right: 0;
+        right: 2px;
         width: 100%;
         height: 100%;
         visibility: hidden;
@@ -114,11 +114,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-size: 25px;
       }
       
       .menu-wrap .menu > div {
         background: black;
-        border-radius: 50%;
+        border-radius: 20%;
         width: 200vw;
         height: 200vw;
         display: flex;
@@ -131,7 +132,7 @@
       
       .menu-wrap .menu > div > div {
         text-align: center;
-        max-width: 90vw;
+        max-width: 95vw;
         max-height: 100vh;
         opacity: 0;
         transition: opacity 0.2s ease;
@@ -140,7 +141,7 @@
       .menu-wrap .menu > div > div > ul > li {
         list-style: none;
         color: #fff;
-        font-size: 1.5rem;
+        font-size: 2rem;
         padding: 1rem;
       }
       
