About page H2 Mobile

--- a/themes/boot/layouts/_default/about.html
+++ b/themes/boot/layouts/_default/about.html
@@ -15,7 +15,7 @@
         <p class="text-center lead">{{.Params.name1}}</p>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 home__about--desc">
-      <h2 class="display-4">{{.Params.h2}}</h2>
+      <h2 class="display-4 about-h2">{{.Params.h2}}</h2>
       <p class="lead">{{.Content}}</p>
     </div>
   </div>
