Padding on Mobile Contact Page

--- a/themes/boot/assets/scss/global/main.scss
+++ b/themes/boot/assets/scss/global/main.scss
@@ -1,3 +1,4 @@
+
 .bg-black {
     background-color: #222;
 }
@@ -101,5 +102,8 @@ h1,h2,h3,h4 {
         background-size: cover;
         background-attachment: initial;
         height: 350px;
+    }
+    .businessquote {
+        font-size: 40px;
     }
 }
