--- a/themes/boot/assets/scss/global/hamburger.scss
+++ b/themes/boot/assets/scss/global/hamburger.scss
@@ -185,3 +185,9 @@
             bottom:40px;
         }
     }
+    @media only screen and (max-width: 768px)  {
+      .nav-link {
+        font-size: 32px !important;
+        font-weight: 600;
+      }
+    }
