--- a/themes/boot/layouts/404.html
+++ b/themes/boot/layouts/404.html
@@ -3,9 +3,9 @@
     <div class="overlay">
       <div class="container">
         <div class="hero-content">
-          <h1 class="display-4">Oops!</h1>
+          <h1 class="display-4">Sorry</h1>
           <h2 class="display-3 uppercase text-white">404 Not Found</h1>
-          <p class="lead">Sorry, an error has occured, Requested page not found!</p>
+          <p class="lead">Sorry, an error has occured. That webpage cannot be found.</p>
           <a href="{{ $.Site.BaseURL }}"><button class="btn btn-outline-light btn-lg">Take Me Home</button></a>
         </div>
       </div>
