--- a/themes/boot/assets/scss/layout/about.scss
+++ b/themes/boot/assets/scss/layout/about.scss
@@ -2,4 +2,11 @@
     .about-h2 {
         font-size: 40px;
 }
+    .home__about--desc {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+.home__about--desc {
+    padding-right: 25px;
 }
