--- a/themes/boot/layouts/404.html
+++ b/themes/boot/layouts/404.html
@@ -6,7 +6,7 @@
           <h1 class="display-4">Sorry</h1>
           <h2 class="display-3 uppercase text-white">404 Not Found</h1>
           <p class="lead">Sorry, an error has occured. That webpage cannot be found.</p>
-          <a href="{{ $.Site.BaseURL }}"><button class="btn btn-outline-light btn-lg">Take Me Home</button></a>
+          <a href="{{ $.Site.BaseURL }}"><button class="btn btn-outline-light btn-lg">Visit Homepage</button></a>
         </div>
       </div>
     </div>
