--- a/themes/boot/assets/scss/global/main.scss
+++ b/themes/boot/assets/scss/global/main.scss
@@ -87,6 +87,9 @@ h1,h2,h3,h4 {
     color: $brand-color !important;
 }
 @media only screen and (max-width: 768px)  {
+    section {
+        padding: 5% !important;
+    }
     .credit {
         text-align: center;
     }
