--- a/themes/boot/assets/scss/layout/home.scss
+++ b/themes/boot/assets/scss/layout/home.scss
@@ -22,8 +22,11 @@
         &--subheading {
             padding-bottom: 3.5rem !important;
         }
+        padding-top: 0px;
+        margin-top: 25px;
     }
     .home__benefits-2 {
+        background-color: transparent !important;
         .row-1 {
             margin-bottom: 0px !important;
         }
