--- a/themes/boot/assets/scss/global/main.scss
+++ b/themes/boot/assets/scss/global/main.scss
@@ -88,7 +88,8 @@ h1,h2,h3,h4 {
 }
 @media only screen and (max-width: 768px)  {
     section {
-        padding: 5% !important;
+        padding-left: 5% !important;
+        padding-right: 5% !important;
     }
     .credit {
         text-align: center;
