--- a/themes/boot/layouts/_default/services.html
+++ b/themes/boot/layouts/_default/services.html
@@ -15,7 +15,7 @@
       <p>{{.Params.service1_desc | safeHTML }}</p>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <img src="{{ $.Site.BaseURL }}img/og.png" alt="{{.Params.service1}}" class="img-fluid services__images" data-aos="fade-up" data-aos-duration="800">
+      <img src="{{ $.Site.BaseURL }}img/og.png" alt="{{.Params.service1}}" class="img-fluid services__images shadow" data-aos="fade-up" data-aos-duration="800">
     </div>
   </div>
   <div class="divider">
