--- a/themes/boot/assets/scss/global/main.scss
+++ b/themes/boot/assets/scss/global/main.scss
@@ -87,9 +87,12 @@ h1,h2,h3,h4 {
     color: $brand-color !important;
 }
 @media only screen and (max-width: 768px)  {
+    .sub-content {
+        padding-left: 3% !important;
+    }
     section {
-        padding-left: 5% !important;
-        padding-right: 5% !important;
+        padding-left: 3% !important;
+        padding-right: 3% !important;
     }
     .credit {
         text-align: center;
