--- a/themes/boot/assets/scss/layout/services.scss
+++ b/themes/boot/assets/scss/layout/services.scss
@@ -10,6 +10,6 @@
         flex-direction: column-reverse;
     }
     .services__images {
-        padding-bottom: 45px;
+        margin-bottom: 45px;
     }
 }
