--- a/themes/boot/assets/scss/layout/contact.scss
+++ b/themes/boot/assets/scss/layout/contact.scss
@@ -14,6 +14,7 @@
 @media only screen and (max-width: 768px)  {
     .contact__form--info {
         padding-top: 0px;
+        padding-right: 0px !important;
         text-align: left;
     }
 }
