--- a/themes/boot/layouts/partials/contactform.html
+++ b/themes/boot/layouts/partials/contactform.html
@@ -10,14 +10,14 @@
             <div class="controls">
     
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
                   <div class="form-group">
                     <label for="form_name">First Name *</label>
                     <input id="form_name" type="text" name="name" class="form-control" placeholder="Enter your firstname *" required="required" data-error="Firstname is required.">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6  col-sm-12">
                   <div class="form-group">
                     <label for="form_lastname">Last Name *</label>
                     <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
@@ -26,14 +26,14 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
                   <div class="form-group">
                     <label for="form_email">Email *</label>
                     <input id="form_email" type="email" name="email" class="form-control" placeholder="Enter your email *" required="required" data-error="Valid email is required.">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
                   <div class="form-group">
                     <label for="form_phone">Phone</label>
                     <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Enter your phone">
