--- a/themes/boot/assets/scss/layout/about.scss
+++ b/themes/boot/assets/scss/layout/about.scss
@@ -6,6 +6,11 @@
         padding-left: 20px;
         padding-right: 20px;
     }
+    .about-name {
+        text-align: left !important;
+        margin-bottom: 25px;
+        padding-left: 3% !important;
+    }
 }
 .home__about--desc {
     padding-right: 25px;
