Images lost repair

--- a/themes/boot/layouts/_default/gallery.html
+++ b/themes/boot/layouts/_default/gallery.html
@@ -16,25 +16,25 @@
 <section class="gallery pt-4 pb-8">
     <div class="container">
         <div class="row">
-          <a href="{{ $.Site.BaseURL}}/img/gallery_img1.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="{{ $.Site.BaseURL}}/img/gallery_img1.jpg" class="img-fluid rounded py-1">
+          <a href="{{ $.Site.BaseURL}}img/gallery_img1.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}img/gallery_img1.jpg" class="img-fluid rounded py-1">
           </a>
-          <a href="{{ $.Site.BaseURL}}/img/gallery_img2.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="{{ $.Site.BaseURL}}/img/gallery_img2.jpg" class="img-fluid rounded py-1">
+          <a href="{{ $.Site.BaseURL}}img/gallery_img2.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}img/gallery_img2.jpg" class="img-fluid rounded py-1">
           </a>
           <a href="{{ $.Site.BaseURL}}/img/gallery_img3.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="{{ $.Site.BaseURL}}/img/gallery_img3.jpg" class="img-fluid rounded py-1">
+            <img src="{{ $.Site.BaseURL}}img/gallery_img3.jpg" class="img-fluid rounded py-1">
           </a>
         </div>
         <div class="row">
-          <a href="{{ $.Site.BaseURL}}/img/gallery_img4.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="{{ $.Site.BaseURL}}/img/gallery_img4.jpg" class="img-fluid rounded py-1">
+          <a href="{{ $.Site.BaseURL}}img/gallery_img4.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}img/gallery_img4.jpg" class="img-fluid rounded py-1">
           </a>
-          <a href="{{ $.Site.BaseURL}}/img/gallery_img5.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="{{ $.Site.BaseURL}}/img/gallery_img5.jpg" class="img-fluid rounded py-1">
+          <a href="{{ $.Site.BaseURL}}img/gallery_img5.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}img/gallery_img5.jpg" class="img-fluid rounded py-1">
           </a>
-          <a href="{{ $.Site.BaseURL}}/img/gallery_img6.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
-            <img src="{{ $.Site.BaseURL}}/img/gallery_img6.jpg" class="img-fluid rounded py-1">
+          <a href="{{ $.Site.BaseURL}}img/gallery_img6.jpg" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+            <img src="{{ $.Site.BaseURL}}img/gallery_img6.jpg" class="img-fluid rounded py-1">
           </a>
         </div>
       </div>
