--- a/themes/boot/layouts/partials/contactform.html
+++ b/themes/boot/layouts/partials/contactform.html
@@ -1,4 +1,5 @@
-<section class="contact__form container py-8">
+<section class="contact__form">
+  <div class="container py-8">
     <div class="row" data-aos="fade-up" data-aos-duration="800">
       <div class="col-lg-6 col-md-6 col-sm-12">
         <div class="pr-3 contact__form--info text-left">
@@ -92,4 +93,5 @@
     </div>
     </div>
       </div>
+    </div>
   </section>  
